// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile Matches Snapshot (defaultOpen) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2:hover {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c2:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c2:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c9 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c9:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: 0 var(--spacing-2x);
}

.c12 {
  line-height: 1.25rem;
  margin: auto 0;
  margin-right: var(--spacing-1x);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.75rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c10 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c13:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c13:hover {
  background-color: #DBDEE1;
}

.c13[disabled],
.c13[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c15:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c15:hover {
  background-color: transparent;
}

.c15[disabled],
.c15[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c3 {
  background-color: #003A5A;
  border-color: #003A5A;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c6 {
  margin-left: var(--spacing-1x);
}

.c8 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: 24px;
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: 24px;
}

.c5 {
  margin-right: var(--spacing-1x);
}

<nav
  aria-label="User menu"
  class="c0 "
>
  <button
    aria-expanded="true"
    class="c1 c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c4 c5"
      role="img"
    >
      <span
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
    Test Button
    <svg
      aria-hidden="true"
      class="c6"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c7 c8"
    data-testid="menu-list"
  >
    <ul
      aria-labelledby="user-label"
      class="c9"
    >
      <li
        class="c10"
      >
        <span
          class="c11"
        >
          <span
            class="c12"
          >
            Test Button
          </span>
        </span>
      </li>
    </ul>
    <ul
      aria-labelledby="user-actions"
      class="c9"
    >
      <li>
        <a
          aria-disabled="false"
          class="c13"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
        >
          <span
            class="c14"
          >
            <span
              class="c12"
            >
              Option A
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c15"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
        >
          <span
            class="c14"
          >
            <span
              class="c12"
            >
              Option B
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c13"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
        >
          <span
            class="c14"
          >
            <span
              class="c12"
            >
              Option C
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c13"
          data-testid="listitem-optionD"
          href="/testd"
          tabindex="0"
        >
          <span
            class="c14"
          >
            <span
              class="c12"
            >
              Option D
            </span>
          </span>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`UserProfile Matches Snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2:hover {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c2:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c2:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c9 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c9:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: 0 var(--spacing-2x);
}

.c12 {
  line-height: 1.25rem;
  margin: auto 0;
  margin-right: var(--spacing-1x);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.75rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c10 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c13:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c13:hover {
  background-color: #DBDEE1;
}

.c13[disabled],
.c13[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c15:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c15:hover {
  background-color: transparent;
}

.c15[disabled],
.c15[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c6 {
  margin-left: var(--spacing-1x);
}

.c8 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: 24px;
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: 24px;
}

.c5 {
  margin-right: var(--spacing-1x);
}

<nav
  aria-label="User menu"
  class="c0 "
>
  <button
    aria-expanded="false"
    class="c1 c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c4 c5"
      role="img"
    >
      <span
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
    Test Button
    <svg
      aria-hidden="true"
      class="c6"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c7 c8"
    data-testid="menu-list"
    hidden=""
  >
    <ul
      aria-labelledby="user-label"
      class="c9"
    >
      <li
        class="c10"
      >
        <span
          class="c11"
        >
          <span
            class="c12"
          >
            Test Button
          </span>
        </span>
      </li>
    </ul>
    <ul
      aria-labelledby="user-actions"
      class="c9"
    >
      <li>
        <a
          aria-disabled="false"
          class="c13"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
        >
          <span
            class="c14"
          >
            <span
              class="c12"
            >
              Option A
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c15"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
        >
          <span
            class="c14"
          >
            <span
              class="c12"
            >
              Option B
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c13"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
        >
          <span
            class="c14"
          >
            <span
              class="c12"
            >
              Option C
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c13"
          data-testid="listitem-optionD"
          href="/testd"
          tabindex="0"
        >
          <span
            class="c14"
          >
            <span
              class="c12"
            >
              Option D
            </span>
          </span>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`UserProfile Matches Snapshot (mobile) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.53px;
  -moz-letter-spacing: 0.53px;
  -ms-letter-spacing: 0.53px;
  letter-spacing: 0.53px;
  line-height: 1.5rem;
  min-height: 48px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2:not(:disabled) {
  cursor: pointer;
}

.c2 > svg {
  color: inherit;
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: 48px;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c3:hover {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c3:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c3:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c8 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c8:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: 0 var(--spacing-2x);
}

.c11 {
  line-height: 1.25rem;
  margin: auto 0;
  margin-right: var(--spacing-1x);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 1rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c9 {
  color: #000000;
  display: block;
  font-size: 1rem;
  line-height: 2.5rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c12:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c12:hover {
  background-color: #DBDEE1;
}

.c12[disabled],
.c12[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c14:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c14:hover {
  background-color: transparent;
}

.c14[disabled],
.c14[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c6 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c7 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.75rem;
  height: 32px;
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: 32px;
}

.c1 button {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0;
}

.c5 {
  margin-right: 0;
}

<nav
  aria-label="User menu"
  class="c0 c1"
>
  <button
    aria-expanded="false"
    class="c2 c3 "
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c4 c5"
      role="img"
    >
      <span
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
  </button>
  <div
    class="c6 c7"
    data-testid="menu-list"
    hidden=""
  >
    <ul
      aria-labelledby="user-label"
      class="c8"
    >
      <li
        class="c9"
      >
        <span
          class="c10"
        >
          <span
            class="c11"
          >
            Test Button
          </span>
        </span>
      </li>
    </ul>
    <ul
      aria-labelledby="user-actions"
      class="c8"
    >
      <li>
        <a
          aria-disabled="false"
          class="c12"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
        >
          <span
            class="c13"
          >
            <span
              class="c11"
            >
              Option A
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c14"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
        >
          <span
            class="c13"
          >
            <span
              class="c11"
            >
              Option B
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c12"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
        >
          <span
            class="c13"
          >
            <span
              class="c11"
            >
              Option C
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c12"
          data-testid="listitem-optionD"
          href="/testd"
          tabindex="0"
        >
          <span
            class="c13"
          >
            <span
              class="c11"
            >
              Option D
            </span>
          </span>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
